$Id$                       -*-text-*-

**** 0.69 ??? ??, 2012

Fix rt.cpan.org #77304

	Fix resolver searchlist from registry setup on Win32.

Enhancement rt.cpan.org #67570

	Make wire2presentation two till eighteen times faster.
	A contribution from Matthew Horsfall

Fix rt.cpan.org #73366

	Remove existing TSIG when resigning with a new TSIG and give warning.

Fix rt.cpan.org #75330

	Also try nameserver without glue (as a last resort) when recursing.

Fix rt.cpan.org #74493

	Read correct resolver configuration in OS/2.


**** 0.68 Jan 30, 2012

Fix rt.cpan.org #72314
	
	Let a Net::DNS::Nameserver bind on Net::DNS::Nameserver::DEFAULT_ADDR
	as a last resort.

Fix to suppress false warnings about subroutine profiles on ancient
	versions of perl.

Fix to avoid constants with value undef which prevents unwanted code from being
	optimized away on ancient versions of perl.

Fix code error in PTR.pm, canonical RDATA not downcased.

Enhancement to clarify the function of parse and data methods, by renaming them
	to decode and encode respectively.

Feature IDN query support.

	Question.pm modified to use the recently introduced DomainName.pm
	module to represent DNS names.  Queries for domain names containing
	non-ASCII characters are now possible on Unicode platforms with CPAN 
	Net::LibIDN installed.

Introduction of Mailbox.pm module that will be used in the future to represent 
	RDATA components containing DNS coded RFC822 mailbox addresses.

Introduction of Text.pm module that will be used in the future to represent
	RDATA components containing text.


**** 0.67 Nov 4, 2011

Enhancement rt.cpan.org #60726

        On Cygwin Net::DNS now builds without Win32::IPHelper, unless a 
        previous version is updated that did use it. 
        The choice may also be set by the --iphelper or --noiphelper option
        to Makefile.PL.

Fix to suppress IO::Socket::INET(6)::peerhost usage with TCP. On some systems
        it doesn't work after receiving data.
